# yolov5_onnx_dnn

./: CMakeLists.txt  OpenCV_Compile.md  README.md  main.cpp
data/: visdrone.names
src/: detector.cpp
